--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 ///
-/// Eventually by HTML5 UP
+/// Massively by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -7,31 +7,57 @@
 /* Header */
 
 	#header {
-		h1 {
-			font-size: 3.25em;
-			margin: 0 0 (_size(element-margin) * 0.275) 0;
+		@include color-typography(invert);
+		@include vendor('align-items', 'center');
+		@include vendor('display', 'flex');
+		@include vendor('flex-direction', 'column');
+		@include vendor('justify-content', 'flex-end');
+		@include vendor('pointer-events', 'none');
+		@include vendor('user-select', 'none');
+		height: 20rem;
+		padding-bottom: (_size(padding) * 4);
+		position: relative;
+		text-align: center;
+		z-index: 2;
+
+		.logo {
+			@include vendor('transition', (
+				'border-color #{_duration(transition)} ease-in-out',
+				'color #{_duration(transition)} ease-in-out',
+				'opacity 0.5s ease',
+				'transform 0.5s ease',
+				'visibility 0.5s'
+			));
+			@include vendor('pointer-events', 'auto');
+			border-style: solid;
+			border-color: _palette(invert, border);
+			border-width: 5px !important;
+			font-family: _font(family-heading);
+			font-size: 2.25rem;
+			font-weight: _font(weight-heading);
+			letter-spacing: 0.075em;
+			line-height: 1;
+			padding: 1rem 1.75rem;
+			text-transform: uppercase;
+			visibility: visible;
+
+			&:hover {
+				border-color: _palette(invert, accent) !important;
+				color: _palette(invert, accent) !important;
+			}
 		}
 
-		p {
-			font-size: 1.35em;
-			line-height: 1.65em;
-		}
-
-		a {
-			color: inherit;
+		@include breakpoint('<=medium') {
+			height: 14rem;
+			padding-bottom: (_size(padding) * 2);
 		}
 
 		@include breakpoint('<=small') {
-			h1 {
-				font-size: 2em;
-			}
+			padding-bottom: (_size(padding) * 1.5);
 
-			p {
-				font-size: 1em;
+			.logo {
+				font-size: 1.75rem;
+				border-width: 3px !important;
 			}
-		}
-
-		@include breakpoint('<=xsmall') {
-			margin: 0 0 (_size(element-margin) * 0.5) 0;
 		}
 	}
